--- a/src/components/Lcd/Digit/styles.css
+++ b/src/components/Lcd/Digit/styles.css
@@ -59,7 +59,7 @@
 }
 
 :global(.modern)  :local(.n3) {
-  background-image: url(data:image/gif;base64,R0lGODlhCwAVAIQQAAAAAIAAAACAAICAAAAAgIAAgACAgMDAwICAgP8AAAD/AP//AAAA//8A/wD//////5W2cS1UApW2cZW2cZW2cZW2cZW2cZW2cZW2cZW2cZW2cZW2cZW2cZW2cZW2cZW2cSH+EUNyZWF0ZWQgd2l0aCBHSU1QACwAAAAACwAVAAAFO+ATjST5QGI5imdqjij6zG5Lz2R81/Kd2zRTzxdBqVYR15F1TEJWu5bpFptSa9cn9GqdVZMqqVI4Lj1CADs=);
+  background-image: url(data:image/gif;base64,R0lGODlhCwAVAIQAAP///4AAAC1UAoCAAAAAgIAAgACAgMDAwICAgP8AAAD/AP//AAAA/5W2cQD//////////////y1UAv///////////////////////////////////////////////////yH+EUNyZWF0ZWQgd2l0aCBHSU1QACwAAAAACwAVAAAFPuAjjCT5NEBpCgCqigLaPDRNtkBtj7IOsygfqae7BYWxlEogUi6ZrmXzWEzOqsAcllgzaru8FjL7Cj9FP2kIADs=);
 }
 
 :global(.modern)  :local(.n4) {
@@ -67,7 +67,7 @@
 }
 
 :global(.modern)  :local(.n5) {
-  background-image: url(data:image/gif;R0lGODlhCwAVAOMAAP///5W2cQCAAICAAAAAgIAAgACAgMDAwICAgC1UAgD/AP//AAAA//8A/wD//////yH+EUNyZWF0ZWQgd2l0aCBHSU1QACwAAAAACwAVAAAENxCkSamUdYKg88YJIIrBZo0kiH6ctpbnWLZrGmYajOdgdZW1yWxlAaIowyOPKPwoQzpLc3fZaSIAOw==);
+  background-image: url(data:image/gif;base64,R0lGODlhCwAVAOMAAP///5W2cQCAAICAAAAAgIAAgACAgMDAwICAgC1UAgD/AP//AAAA//8A/wD//////yH+EUNyZWF0ZWQgd2l0aCBHSU1QACwAAAAACwAVAAAENxCkSamUdYKg88YJIIrBZo0kiH6ctpbnWLZrGmYajOdgdZW1yWxlAaIowyOPKPwoQzpLc3fZaSIAOw==);
 }
 
 :global(.modern)  :local(.n6) {
@@ -75,7 +75,7 @@
 }
 
 :global(.modern)  :local(.n7) {
-  background-image: url(data:image/gif;R0lGODlhCwAVAOMAAP///5W2cQCAAICAAAAAgIAAgACAgMDAwICAgC1UAgD/AP//AAAA//8A/wD//////yH+EUNyZWF0ZWQgd2l0aCBHSU1QACwAAAAACwAVAAAENxCkSSkIsk55s50YBoxeR45UeJbimZqk1bqJqIrJeJt2h8M0FS03Q4GArJVHGNv0cDWdDyXdASIAOw==);
+  background-image: url(data:image/gif;base64,R0lGODlhCwAVAOMAAP///5W2cQCAAICAAAAAgIAAgACAgMDAwICAgC1UAgD/AP//AAAA//8A/wD//////yH+EUNyZWF0ZWQgd2l0aCBHSU1QACwAAAAACwAVAAAENxCkSSkIsk55s50YBoxeR45UeJbimZqk1bqJqIrJeJt2h8M0FS03Q4GArJVHGNv0cDWdDyXdASIAOw==);
 }
 
 :global(.modern)  :local(.n8) {
